# Privacy-Auction

./: .gitignore  README.md
CCS22/: CMakeLists.txt  bidder.cpp  bidder.h  bulletinBoard.cpp  bulletinBoard.h  evaluator.cpp  evaluator.h  hash.cpp  hash.h  main.cpp  params.h  types.h
CCS22/tests/: CMakeLists.txt  genTests.py
SEAL/: CMakeLists.txt  bidder.cpp  bidder.h  bulletinBoard.cpp  bulletinBoard.h  hash.cpp  hash.h  main.cpp  params.h  test.cpp  types.h  utils.cpp  utils.h
include/: dataTracker.h  print.h  timeTracker.h  utils.h
